//
// Copyright 2020 Brightgate Inc.
//
// This Source Code Form is subject to the terms of the Mozilla Public
// License, v. 2.0. If a copy of the MPL was not distributed with this
// file, You can obtain one at https://mozilla.org/MPL/2.0/.
//

// vim:set comments=b\://:

syntax = "proto3";

package cfgmsg;
import "google/protobuf/timestamp.proto";

message Version {
	int32 major = 0x01;
	int32 minor = 0x02;
}

message ConfigOp {
	enum Operation {
		UNKNOWN = 0;
		GET = 1;
		SET = 2;
		CREATE = 3;
		DELETE = 4;
		PING = 5;
		ADDVALID = 6;
		TEST = 7;
		TESTEQ = 8;
		REPLACE = 9;
	}
	Operation operation = 0x20;
	string property = 0x21;
	string value = 0x22;
	google.protobuf.Timestamp expires = 0x23;
}

message ConfigQuery {
	google.protobuf.Timestamp timestamp = 0x01;
	string sender = 0x02;
	string debug = 0x03;
	string siteUUID = 0x04;
	Version version = 0x05;
	int32 level = 0x06;
	int64 cmdID = 0x07;
	string hashPath	= 0x08;
	bytes hash = 0x09;
	repeated ConfigOp ops = 0x24;
}

message ConfigResponse {
	google.protobuf.Timestamp timestamp = 0x01;
	string sender = 0x02;
	string debug = 0x03;
	Version version = 0x05;
	Version min_version = 0x06;

	enum OpResponse {
                UNKNOWN		= 0;
		OK		= 1;
                NOCMD		= 2;
		QUEUED		= 3;
		INPROGRESS	= 4;
		FAILED		= 5;
		UNSUPPORTED	= 6;
		NOPROP		= 7;
		BADVERSION	= 8;
		BADTIME		= 9;
		NOTEQUAL	= 10;
		NOCONFIG	= 11;
		BADTREE		= 12;
		CANCELED	= 13;
	}
	OpResponse response	= 0x21;
	int64 cmdID		= 0x22;
	string value		= 0x23;
	string errmsg		= 0x24;
}

